k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: todo
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: shubhamshinde2206/frontend:10092460915
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-external
spec:
  type: LoadBalancer 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
